# Neuro-Crypt

./: .gitignore  README.md  replit.md
.streamlit/: config.toml
backend/: app.py  auth_api.py  pyproject.toml  requirements.txt  simulator_api.py
backend/old_streamlit_components/: navbar.py
backend/utils/: __init__.py
backend/utils/utils/: bias_detector.py  charts.py  data_fetcher.py  database.py  ml_models.py  mongodb_db.py  news_scraper.py  sentiment_analyzer.py
neurocrypt-react/: API_SETUP.md  next.config.js  package-lock.json  package.json
neurocrypt-react/public/: 4_ML_Forecasting.py
neurocrypt-react/src/app/: globals.css  layout.tsx  page.tsx
neurocrypt-react/src/app/analytics/: page.tsx
neurocrypt-react/src/app/bias-analysis/: page.tsx
neurocrypt-react/src/app/contact-us/: page.tsx
neurocrypt-react/src/app/dashboard/: page.tsx
neurocrypt-react/src/app/investment-simulator/: page.tsx
neurocrypt-react/src/app/login/: page.tsx
neurocrypt-react/src/app/market-data/: page.tsx
neurocrypt-react/src/app/ml-forecasting/: page.tsx
neurocrypt-react/src/app/sentiment-analysis/: page.tsx
neurocrypt-react/src/app/signup/: page.tsx
neurocrypt-react/src/app/view/: page.tsx
neurocrypt-react/src/components/: Analytics.tsx  BiasAnalysis.tsx  ContactUs.tsx  Dashboard.tsx  Footer.tsx  InvestmentSimulator.tsx  MLForecasting.tsx  MarketData.tsx  Navbar.tsx  PageLayout.tsx  ProtectedRoute.tsx  SentimentAnalysis.tsx  View.tsx
neurocrypt-react/src/context/: AuthContext.tsx
neurocrypt-react/src/lib/: api.ts  auth.ts
(+3 files in other folders)
